fix: ajustes nos dockersfiles

--- a/first-score-db/Dockerfile
+++ b/first-score-db/Dockerfile
@@ -4,4 +4,4 @@ COPY init.sql /docker-entrypoint-initdb.d/
 
 ENV POSTGRES_USER admin
 ENV POSTGRES_PASSWORD f4c1ld3m41s
-ENV POSTGRES_DB firstscore
+ENV POSTGRES_DB first-score-db
